# LavaCake

./: .gitmodules  CMakeLists-old.txt  CMakeLists.txt  LICENSE  README.md
Helpers/: CMakeLists.txt
Samples/Common Files/: Camera.cpp  Camera.h  CookbookSampleFramework.cpp  CookbookSampleFramework.h  OS.cpp  OS.h  OrbitingCamera.cpp  OrbitingCamera.h
Samples/Data/Shaders/ConsoleRenderer/: console.frag  console.vert  console.vert.spv
Samples/Data/Shaders/FourierTransform/: fourier_pass1.comp  fourier_pass1.comp.spv  fourier_pass2.comp  fourier_pass2.comp.spv  shader.frag  shader.frag.spv  shader.vert  shader.vert.spv
Samples/Data/Shaders/JumpFlooding/: JumpFlooding.comp  JumpFlooding.comp.spv  shader.frag  shader.frag.spv  shader.vert.spv
Samples/Data/Shaders/consoleRenderer/: shader.frag  shader.frag.spv  shader.vert
Samples/Data/Shaders/helloworld/: shader.frag  shader.frag.spv  shader.frag.spv.txt  shader.vert  shader.vert.spv  shader.vert.spv.txt
Samples/Source Files/11 Lighting/01-Rendering_a_geometry_with_vertex_diffuse_lighting/: main.cpp
Samples/Source Files/11 Lighting/02-Rendering_a_geometry_with_fragment_specular_lighting/: main.cpp
Samples/Source Files/11 Lighting/03-Rendering_a_normal_mapped_geometry/: main.cpp
Samples/Source Files/11 Lighting/04-Rendering_a_reflective_and_refractive_geometry_using_cubemaps/: main.cpp
Samples/Source Files/11 Lighting/05-Adding_shadows_to_the_scene/: main.cpp
Samples/Source Files/12 Advanced Rendering Techniques/01-Drawing_a_skybox/: main.cpp
Samples/Source Files/12 Advanced Rendering Techniques/02-Drawing_bilboards_using_geometry_shaders/: main.cpp
Samples/Source Files/12 Advanced Rendering Techniques/03-Drawing_particles_using_compute_and_graphics_pipelines/: main.cpp
Samples/Source Files/12 Advanced Rendering Techniques/04-Rendering_a_tesselated_terrain/: main.cpp
Samples/Source Files/12 Advanced Rendering Techniques/05-Rendering_a_fullscreen_quad_for_postprocessing/: main.cpp
Samples/Source Files/12 Advanced Rendering Techniques/06-Using_input_attachment_for_color_correction_postprocess_effect/: main.cpp
Samples/Source Files/ConsoleRenderer/: main.cpp
Samples/Source Files/CreatingAWindow/: main.cpp
Samples/Source Files/DiffuseLighting/: main.cpp
Samples/Source Files/FourierTransform/: main.cpp
Samples/Source Files/HelloWorld/: main.cpp
Samples/Source Files/ImGui/: main.cpp
Samples/Source Files/JumpFlooding/: main.cpp
Samples/Source Files/LavaCake/CreatingAWindow/: main.cpp
Samples/Source Files/LavaCake/DiffuseLighting/: main.cpp
Samples/Source Files/LavaCake/NormalMap/: main.cpp
Samples/Source Files/LavaCake/PostProcess/: main.cpp
Samples/Source Files/LavaCake/ReflectionRefraction/: main.cpp
Samples/Source Files/LavaCake/Shadow/: main.cpp
Samples/Source Files/LavaCake/SpecularLighting/: main.cpp
Samples/Source Files/NormalMap/: main.cpp
Samples/Source Files/Other/01-Creating_Logical_Device/: main.cpp
Samples/Source Files/Other/02-Creating_Swapchain/: main.cpp
Samples/Source Files/Other/03-Using_Render_Passes/: main.cpp
Samples/Source Files/Other/04-Using_Graphics_Pipeline/: main.cpp
Samples/Source Files/Other/05-Using_Combined_Image_Samplers/: main.cpp
Samples/Source Files/Other/06-Using_Uniform_Buffers/: main.cpp
Samples/Source Files/Other/07-Using_Push_Constants/: main.cpp
Samples/Source Files/Particles/: main.cpp
Samples/Source Files/PostProcess/: main.cpp
Samples/Source Files/ReflectionRefraction/: main.cpp
Samples/Source Files/Shadow/: main.cpp
Samples/Source Files/SpecularLighting/: main.cpp
docs/: .buildinfo  .gitignore  AutoSPIRV.html  Buffer.html  ByteDictionary.html  CommandBuffer.html  ComputePipeline.html  Constant.html  Device.html  Doxyfile  ErrorCheck.html  FrameBuffer.html  Framework.html  Getting Started.html  GraphicPipeline.html  HeadlessCompute.html  HelloWorld.html  ImGuiWrapper.html  PushConstant.html  RenderPass.html  ShaderModule.html  SurfaceInitialisator.html  Textures.html  UniformBuffer.html  generate.sh  genindex.html  image.html  index.html  objects.inv  search.html  searchindex.js
docs/.doctrees/: AutoSPIRV.doctree  Buffer.doctree  ByteDictionary.doctree  CommandBuffer.doctree  ComputePipeline.doctree  Constant.doctree  Device.doctree  ErrorCheck.doctree  FrameBuffer.doctree  Framework.doctree  Getting Started.doctree  GraphicPipeline.doctree  HeadlessCompute.doctree  HelloWorld.doctree  ImGuiWrapper.doctree  PushConstant.doctree  RenderPass.doctree  ShaderModule.doctree  SurfaceInitialisator.doctree  Textures.doctree  UniformBuffer.doctree  environment.pickle  image.doctree  index.doctree
docs/_sources/: ByteDictionary.rst.txt  ErrorCheck.rst.txt  FrameBuffer.rst.txt  Framework.rst.txt  Getting Started.md.txt  GraphicPipeline.rst.txt  HeadlessCompute.md.txt  HelloWorld.md.txt  SurfaceInitialisator.rst.txt  Textures.rst.txt  index.rst.txt
docs/_static/: alabaster.css  documentation_options.js  sphinxdoc.css  traditional.css
docs/html/: .buildinfo  AutoSPIRV.html  Constant.html  Device.html  Getting Started.html  HelloWorld.html  genindex.html  objects.inv  searchindex.js
docs/html/.doctrees/: AutoSPIRV.doctree  Buffer.doctree  CommandBuffer.doctree  ComputePipeline.doctree  Constant.doctree  Device.doctree  ErrorCheck.doctree  Framework.doctree  Getting Started.doctree  GraphicPipeline.doctree  HelloWorld.doctree  ImGuiWrapper.doctree  environment.pickle  index.doctree
docs/html/_sources/: AutoSPIRV.md.txt  Buffer.rst.txt  CommandBuffer.rst.txt  Constant.rst.txt  Framework.rst.txt  HelloWorld.md.txt
docs/sphinx/: Buffer.rst  ComputePipeline.rst  Device.rst  Framework.rst  HelloWorld.md  ImGuiWrapper.rst  conf.py  index.rst
docs/src/: .gitignore  Doxyfile  generate.sh
docs/src/sphinx/: AutoSPIRV.md  FrameBuffer.rst  Framework.rst  HelloWorld.md  Image.rst  PushConstant.rst  RenderPass.rst  ShaderModule.rst  SurfaceInitialisator.rst  Textures.rst  UniformBuffer.rst  conf.py  index.rst
source/: conf.py  index.rst
src/vulkanLoader/: VulkanFunctions.inl
(+107 files in other folders)
